sfdc/SFDCOfflinePOC-pkg/objects/SampleRequest__c.object
<CustomObject>
    <description>Custom object to track sample requests created for customer.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person to whom the sample will be sent.</description>
        <inlineHelpText>The person to whom the sample will be sent.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Tracks the delivery date of the sample.</description>
        <inlineHelpText>Tracks the delivery date of the sample.</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product to be used to request sample.</description>
        <inlineHelpText>Product to be used to request sample.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Sample Requests_Product</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of the sample.</description>
        <inlineHelpText>The quantity of the sample.</inlineHelpText>
        <label>Quantity</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The sample request status.</description>
        <inlineHelpText>The sample request status.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sample Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RQST-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>